# startup-disk

./: .gitlab-ci.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  startup-disk.doap
res/: boot_candidate.ui  menus.ui  org.gnome.StartupDisk.desktop  org.gnome.StartupDisk.metainfo.xml  org.gnome.StartupDisk.policy  org.startup_disk.StartupDisk.desktop  org.startup_disk.StartupDisk.metainfo.xml  org.startup_disk.StartupDisk.policy  resources.gresource.xml  style.css  window.ui
src/: application.rs  config.rs  lib.rs  main.rs  startup_disk.rs  window.rs
src/boot_candidate/: mod.rs  object.rs
src/startup_disk/: asahi.rs  mock.rs
