[package]
name = "startup-disk"
version = "0.1.5"
authors = ["Davide Cavalca <davide@cavalca.name>"]
edition = "2021"
repository = "https://gitlab.gnome.org/davide125/startup-disk.git"
homepage = "https://gitlab.gnome.org/davide125/startup-disk"
license = "MIT"
documentation = "https://gitlab.gnome.org/davide125/startup-disk"
description = "Interface to choose the startup volume on Apple Silicon systems"
categories = ["hardware-support"]
keywords = ["gnome", "asahi"]

[dependencies]
adw = { version = "0.6.0", package = "libadwaita", features = ["v1_4"] }
asahi-bless = "0.4.2"
gtk = { version = "0.8.2", package = "gtk4", features = ["gnome_45"] }
rand = "0.8.5"
sudo = "0.6"
uuid = "1.8"

[build-dependencies]
glib-build-tools = "0.18.0"
