[package]
name = "startup-disk"
version = "0.1.6"
authors = ["Davide Cavalca <davide@cavalca.name>"]
edition = "2021"
repository = "https://gitlab.gnome.org/davide125/startup-disk.git"
homepage = "https://gitlab.gnome.org/davide125/startup-disk"
license = "MIT"
documentation = "https://gitlab.gnome.org/davide125/startup-disk"
description = "Interface to choose the startup volume on Apple Silicon systems"
categories = ["hardware-support"]
keywords = ["gnome", "asahi"]

[dependencies]
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
asahi-bless = "0.4.2"
gtk = { version = "0.10", package = "gtk4", features = ["gnome_49"] }
rand = "0.9"
sudo = "0.6"
uuid = "1.18"

[build-dependencies]
glib-build-tools = "0.20.0"
